sample3/deplyoment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "hello-deployment"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "hello-app"
  template:
    metadata:
      labels:
        app: "hello-app"
    spec:
      containers:
        - image: "anuruddhal/sample2:1.0.0"
          name: "hello-app-container"
          ports:
            - containerPort: 9096
