sample3/service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  labels:
    app: "service"
  name: "service-svc"
spec:
  ports:
  - name: "port-1-service"
    port: 9096
    protocol: "TCP"
    targetPort: 9096
  selector:
    app: "service"
  type: "ClusterIP"
