sample3/service_nodeport.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  labels:
    app: "service"
  name: "service-svc-nodeport"
spec:
  ports:
  - name: "port-1-service"
    port: 9096
    protocol: "TCP"
    targetPort: 9096
    nodePort: 30007
  selector:
    app: "service"
  type: "NodePort"
