sample3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-svc-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: hello.ballerina.me
    http:
      paths:
      - backend:
          service:
            name: service-svc
            port:
              number: 9096
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
